# T3-Arena

./: README.md  elo.py  main.py  pyproject.toml
Mid Eval/Complete/: app.py  facial_recognition_module.py
Mid Eval/Complete/Fetch_data/: harvester.py  ta_data.csv
Mid Eval/Complete/Frontend/CSS/: combat_logs.css  leaderboard.css  lobby_command_center.css  login.css  match_arena.css
Mid Eval/Complete/Frontend/HTML/: combat_logs.html  leaderboard.html  lobby_command_center.html  login.html  match_arena.html
Mid Eval/Complete/Frontend/JS/: combat_logs.js  leaderboard.js  lobby_command_center.js  login.js  match_arena.js
Mid Eval/Dax/Frontend/CSS/: combat_logs.css  leaderboard.css  lobby_command_center.css
Mid Eval/Dax/Frontend/HTML/: combat_logs.html  leaderboard.html  lobby_command_center.html
Mid Eval/Dax/Frontend/JS/: combat_logs.js  leaderboard.js  lobby_command_center.js  match_arena.js
Mid Eval/Dax/frontend/csses/: login.css
Mid Eval/Dax/frontend/htmls/: lobby_command_center.html  login.html
Mid Eval/Dax/frontend/jses/: lobby_command_center.js  login.js
Mid Eval/Garvit/: app.py  test_api.py
Mid Eval/Pranay/: harvester.py
Project/Frontend/CSS/: login.css  registration.css
Project/Frontend/HTML/: login.html  registration.html
Project/Frontend/JS/: login.js  registration.js
dum/: about.html  base.css  index.css  scroll.js  theme.js
